--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Vite config
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+.wrangler
+
 # Dependencies
 node_modules
 .pnp
@@ -7,10 +12,12 @@ node_modules
 
 # Local env files
 .env
+.env.*
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+!.env.example
 
 # Testing
 coverage
@@ -36,3 +43,19 @@ yarn-error.log*
 # Misc
 .DS_Store
 *.pem
+
+# Svelte Kit
+.svelte-kit
+
+# Backend AWS
+jspm_packages
+
+# Serverless directories
+.serverless
+
+# esbuild directories
+.esbuild
+
+# Wepack
+
+.webpack
