--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
-    "dev": "turbo dev",
-    "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "validate": "run-s \"validate.*\"",
+    "validate.test": "turbo run test --parallel",
+    "validate.check": "turbo run check --parallel",
+    "validate.lint": "turbo run lint --parallel",
+    "validate.fmt": "turbo run fmt --parallel",
+    "validate.build": "turbo run build --parallel",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint --parallel",
+    "test": "turbo run test --parallel",
+    "fmt": "turbo run fmt --parallel",
+    "check": "turbo run check --parallel",
+    "prepare": "husky"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
     "turbo": "latest"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "packageManager": "npm@10.2.4",
   "workspaces": [
