--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "backend",
   "version": "0.0.1",
-  "description": "Course Taking Note Backend",
+  "description": "Course Take Note Backend",
   "engines": {
     "node": ">=20"
-  }, 
+  },
   "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts",
-
+    "dev": "tsx watch src/server.ts",
     "fmt": "run-s \"fmt.*\"",
     "fmt.write": "prettier --write \"src/**/*.ts\"",
     "fmt.check": "prettier --check \"src/**/*.ts\"",
@@ -17,12 +15,22 @@
     "lint.check": "eslint  \"src/**/*.ts\"  --max-warnings=0"
   },
   "dependencies": {
-    "hono": "^3.12.8"
+    "@hono/node-server": "^1.7.0",
+    "@hono/swagger-ui": "^0.2.1",
+    "@hono/zod-openapi": "^0.9.6",
+    "argon2": "^0.31.2",
+    "dotenv": "^16.4.1",
+    "hono": "^3.12.8",
+    "http-status-codes": "^2.3.0",
+    "kysely": "^0.27.2",
+    "nanoid": "^5.0.5",
+    "pg": "^8.11.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@cloudflare/workers-types": "^4.20240129.0",
-    "wrangler": "^3.25.0"
+    "@types/pg": "^8.11.0",
+    "tsx": "^4.7.0"
   },
   "lint-staged": {
     "**/src/**/*.ts": [
