--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,14 +1,10 @@
 {
 	"compilerOptions": {
-		"target": "ESNext",
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
 		"strict": true,
-		"lib": ["ESNext"],
-		"types": ["@cloudflare/workers-types"],
 		"baseUrl": ".",
 		"paths": {
 			"$*": ["src/*"]
-		}
+		},
+		"jsxImportSource": "hono/jsx"
 	}
 }
