--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "lint-staged": "^15.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.1.1",
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=20"
