--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,6 +18,7 @@
     "@hono/node-server": "^1.7.0",
     "@hono/swagger-ui": "^0.2.1",
     "@hono/zod-openapi": "^0.9.6",
+    "@web-std/file": "^3.0.3",
     "argon2": "^0.31.2",
     "dotenv": "^16.4.1",
     "hono": "^3.12.8",
@@ -25,6 +26,7 @@
     "kysely": "^0.27.2",
     "nanoid": "^5.0.5",
     "pg": "^8.11.3",
+    "sharp": "^0.33.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
