--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -5,6 +5,7 @@
 		"paths": {
 			"$*": ["src/*"]
 		},
-		"jsxImportSource": "hono/jsx"
+		"jsxImportSource": "hono/jsx",
+		"esModuleInterop": true
 	}
 }
