--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,6 +6,9 @@
 			"$*": ["src/*"]
 		},
 		"jsxImportSource": "hono/jsx",
-		"esModuleInterop": true
+		"esModuleInterop": true,
+		"module": "esnext",
+		"moduleResolution": "Bundler",
+		"allowJs": true
 	}
 }
